Adding store link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,6 +68,9 @@
                         <li>
                             <a href="{{ item.url }}">{{ item.text }}</a>
                         </li>
+                        <li>
+                            <a href="https://docs.google.com/document/d/1e1EI69LHhySZYZcfCa0Ce2tNBSfRgkRUztje40aq4T8/edit?usp=sharing">Tienda</a>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
