--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    https://docs.google.com/document/d/1e1EI69LHhySZYZcfCa0Ce2tNBSfRgkRUztje40aq4T8/edit?usp=sharing<span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/"> {{ site.data.global.title }}<i class="fa fa-heart"></i></a>
             </div>
@@ -68,10 +68,11 @@
                         <li>
                             <a href="{{ item.url }}">{{ item.text }}</a>
                         </li>
-                        <li>
-                            <a href="https://docs.google.com/document/d/1e1EI69LHhySZYZcfCa0Ce2tNBSfRgkRUztje40aq4T8/edit?usp=sharing">Tienda</a>
-                        </li>
+
                     {% endfor %}
+                      <li>
+                          <a href="https://docs.google.com/document/d/1e1EI69LHhySZYZcfCa0Ce2tNBSfRgkRUztje40aq4T8/edit?usp=sharing">Tienda</a>
+                      </li>
                 </ul>
             </div>
         </div>
