Add instagram repo

--- a/css/style.scss
+++ b/css/style.scss
@@ -114,6 +114,9 @@ h1.special {
 }
 
 #Instagram {
+  .repo {
+    text-align: center;
+  }
   h2 {
     font-weight: bold;
     color: $color-railsgirls;
