--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
 
-    <title>{% if page.title %}{{ page.title }} ♥ {{ site.data.global.title }}{% elsif post.title %}{{ post.title }} ♥ {{ site.data.global.title }}{% else %}{{ site.data.global.title }} ♥ {{ site.data.global.description }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title }} | {{ site.data.global.title }}{% elsif post.title %}{{ post.title }} ♥ {{ site.data.global.title }}{% else %}{{ site.data.global.title }} ♥ {{ site.data.global.description }}{% endif %}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta content="yes" name="apple-mobile-web-app-capable">
@@ -60,7 +60,7 @@
                     <span class="icon-bar"></span>
                     https://docs.google.com/document/d/1e1EI69LHhySZYZcfCa0Ce2tNBSfRgkRUztje40aq4T8/edit?usp=sharing<span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"> {{ site.data.global.title }}<i class="fa fa-heart"></i></a>
+                <a class="navbar-brand" href="/"> {{ site.data.global.title }}<img class="logo" src="{{ site.url }}/assets/images/rg-simple-logo.png" alt="Rails Girls" height="30" width="30"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
