Updating description and adding link to new event

--- a/_includes/title-group.html
+++ b/_includes/title-group.html
@@ -16,6 +16,8 @@
             {{ post.lead_text }}
         {% else %}
             {{ site.data.global.description }}
+            <br/><br/><br/>
+            <h3>{{ site.data.global.new_event_message }}</h3>
         {% endif %}
     </p>
 </div>
