added social meta tags and new logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,9 +37,27 @@
     <meta name="msapplication-TileImage" content="{{ site.data.global.url }}/img/favicons/favicon-144.png">
     <meta name="msapplication-TileColor" content="#ffffff">
 
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Rails Girls Cali" />
+    <meta name="description" content="¡Railsmociónate y construye cosas increíbles!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://railsgirlscali.com/" />
+    <meta property="og:title" content="Rails Girls Cali" />
+    <meta property="og:description" content="¡Railsmociónate y construye cosas increíbles!" />
+    <meta property="og:image" content="https://railsgirlscali.com/assets/images/logo-railsgirls-red.svg/" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://twitter.com/rgcalioficial/" />
+    <meta property="twitter:title" content="Rails Girls Cali" />
+    <meta property="twitter:description" content="¡Railsmociónate y construye cosas increíbles!" />
+    <meta property="twitter:image" content="https://railsgirlscali.com/assets/images/logo-railsgirls-red.svg" />
+
     <!-- Fonts -->
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400,400italic,700,700italic|Oswald:300,400,700">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400,400italic,700,700italic|Oswald:300,400,700" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 
     <!-- Styles -->
     <link rel="stylesheet" href="{{ site.data.global.url }}/css/style.css">
