fixed favicon path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
     <link rel="alternate" type="application/atom+xml" title="{{ site.data.global.title }} ♥ {{ site.data.global.description }}" href="{{ site.data.global.url }}/atom.xml">
 
     <!-- Favicons -->
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="{{ site.data.global.url }}/favicon.ico">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="{{ site.data.global.url }}/assets/images/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.data.global.url }}/assets/images/favicons/favicon-57.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.data.global.url }}/assets/images/favicons/favicon-57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ site.data.global.url }}/assets/images/favicons/favicon-60.png">
