--- a/_includes/title-group.html
+++ b/_includes/title-group.html
@@ -15,8 +15,8 @@
         {% elsif post.lead_text %}
             {{ post.lead_text }}
         {% else %}
-            {{ site.data.global.description }}
-            <br/><br/><br/>
+            <!--{{ site.data.global.description }}-->
+            <!--<br/><br/><br/>-->
             <h3>{{ site.data.global.new_event_message }}</h3>
         {% endif %}
     </p>
