--- a/css/style.scss
+++ b/css/style.scss
@@ -215,3 +215,32 @@ pre {
     background-color: #DD390D;
     color: #fff;
 }
+
+.thumbnail {
+  border: none;
+  box-shadow: none;
+  text-align: center;
+  padding: 20px;
+}
+
+.thumbnail img {
+  display: inline-block;
+  max-width: 100%;
+  max-height: 100px;
+  object-fit: contain;
+}
+
+
+.thumbnail {
+  border: none;
+  box-shadow: none;
+  text-align: center;
+  padding: 20px;
+}
+
+.thumbnail img {
+  display: inline-block;
+  max-width: 100%;
+  max-height: 100px;
+  object-fit: contain;
+}
