--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,3 @@
----
----
 @import '../_sass/bootstrap';
 @import '../_sass/syntax-highlighting';
 
@@ -216,31 +214,12 @@ pre {
     color: #fff;
 }
 
-.thumbnail {
+.sponsors-wrapper .thumbnail {
   border: none;
   box-shadow: none;
-  text-align: center;
-  padding: 20px;
 }
 
-.thumbnail img {
-  display: inline-block;
-  max-width: 100%;
-  max-height: 100px;
-  object-fit: contain;
-}
-
-
-.thumbnail {
-  border: none;
-  box-shadow: none;
-  text-align: center;
-  padding: 20px;
-}
-
-.thumbnail img {
-  display: inline-block;
-  max-width: 100%;
+.sponsors-wrapper .thumbnail img {
   max-height: 100px;
   object-fit: contain;
 }
