--- a/css/style.scss
+++ b/css/style.scss
@@ -1,225 +1,3 @@
-@import '../_sass/bootstrap';
-@import '../_sass/syntax-highlighting';
-
-$color-railsgirls: #DD390D;
-$color-grey: #777777;
-
-%oswald { font-family: 'Oswald', sans-serif; }
-%roboto { font-family: 'Roboto Condensed', sans-serif; }
-
-body {
-    @extend %roboto;
-    font-size: 18px;
-    line-height: 30px;
-    padding-top: 51px;
-    -webkit-font-smoothing: antialiased;
-}
-p {
-    margin-bottom: 30px;
-}
-section, header, footer, main, article, nav, aside { position: relative; }
-a {
-    outline: none !important;
-    text-decoration: none !important;
-    transition: all 225ms ease;
-    color: $color-railsgirls;
-
-    &:hover { color: #6165FF; }
-}
-.btn {
-    text-transform: uppercase;
-    font-weight: 400;
-    @extend %oswald;
-}
-h1, h2, h3, h4, h5, h6 { @extend %oswald; }
-::selection {
-    background: #086AFF;
-    color: #fff;
-}
-nav.navbar {
-    margin: 0;
-    a {
-        text-transform: uppercase;
-        font-size: 20px;
-    }
-    &.navbar-inverse {
-      background-color: $color-railsgirls;
-      border-color: $color-railsgirls;
-      .navbar-nav.navbar-right > li > a {
-        color: #FFF;
-      }
-    }
-    a.navbar-brand {
-        text-transform: none;
-        color: #fff;
-        i {
-          padding-left: 10px;
-          transition: inherit;
-          color: #fff;
-          transform: scale(1);
-        }
-        &:hover i {
-          transform: scale(1.35);
-        }
-    }
-    .navbar-header{
-        a.navbar-brand {
-            img.logo{
-                display: inline-block;
-                margin-left: 10px;
-                margin-top: -5px;
-            }
-        }
-    }
-}
-
-.title-group {
-    text-align: center;
-    padding: 0 15px;
-    margin: 50px 0 100px;
-
-    p {
-        max-width: 800px;
-        margin: 25px auto 0;
-    }
-}
-h1.special {
-    position: relative;
-    text-align: center;
-    overflow: hidden;
-    margin: 0;
-    text-transform: uppercase;
-    @extend %oswald;
-    font-size: 69px;
-    line-height: 69px;
-    font-weight: 700;
-    color: $color-railsgirls;
-
-    span {
-        display: inline-block;
-        position: relative;
-        padding: 0 15px;
-        max-width: 1000px;
-
-        &:before, &:after {
-            content: '';
-            position: absolute;
-            display: block;
-            height: 1px;
-            background: #e8e8e8;
-            width: 99999999px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        &:before { left: 100%; }
-        &:after { right: 100%; }
-    }
-}
-
-#Instagram {
-  .repo {
-    text-align: center;
-  }
-  h2 {
-    font-weight: bold;
-    color: $color-railsgirls;
-  }
-  h3 {
-    color: $color-grey;
-  }
-}
-
-.highlight {
-    max-width: 750px;
-    margin: 0 auto;
-}
-.site-footer {
-    text-align: center;
-    margin-top: 200px;
-}
-
-.pagination-wrap {
-    text-align: center;
-}
-
-.topper {
-    height: 500px;
-    position: relative;
-
-    .img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: block;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 50%;
-    }
-
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: block;
-    }
-}
-
-pre {
-    margin: 40px 0px;
-}
-
-
-@media only screen and (max-width : 991px) {
-    pre {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@media only screen and (max-width : 480px) {
-    .tile .featurette, .topper {
-        height: 300px;
-    }
-
-    h1.special,
-    .tile h2 {
-        font-size: 40px;
-        line-height: 44px;
-    }
-
-    .tile .inner-guts {
-        padding: 15px 25px;
-    }
-
-    .tile .excerpt {
-        font-size: 22px;
-        line-height: 35px;
-    }
-}
-
-.navbar-inverse .navbar-nav .dropdown-menu > li > a {
-    text-transform: none;
-    font-size: 16px;
-    padding: 10px 20px;
-    color: #333;
-}
-
-.navbar-inverse .navbar-nav .dropdown-menu > li > a:hover {
-    background-color: #DD390D;
-    color: #fff;
-}
-
-.sponsors-wrapper .thumbnail {
-  border: none;
-  box-shadow: none;
-}
-
-.sponsors-wrapper .thumbnail img {
-  max-height: 100px;
-  object-fit: contain;
-}
+---
+---
+@import 'style';
